# stoop-backend

./: .gitignore  .pre-commit-config.yaml  001-init-python-project.md  002-dev-tooling.md  003-supabase-setup.md  004-clerk-setup.md  005-fastapi-app-factory.md  006-settings-module.md  007-logging-and-sentry.md  008-alembic-and-landlords.md  009-async-sqlalchemy-session.md  010-clerk-jwt-dependency.md  AGENTS.md  CLAUDE.md  EPIC.md  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: audit.py  config.py  cost_reporting.py  deps.py  errors.py  main.py  observability.py  pagination.py  property_provisioning.py  push_outbox.py  scheduler.py  trust.py  validation.py
apps/api/app/agent/: __init__.py  approve_by_sms.py  case_lifecycle.py  checkpointer.py  degraded_mode_sweep.py  draft_sender.py  emergency.py  emergency_chain.py  graph.py  graph_entry.py  landlord_sms.py  prefilter.py  rubric.py  schemas.py  state.py  tools.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/integrations/: __init__.py  anthropic.py  expo_push.py  sms_segments.py  sms_sender.py  supabase_auth.py  twilio.py  twilio_provision.py  twilio_send.py  weather.py
apps/api/app/middleware/: __init__.py  (+1 more)
apps/api/evals/: __init__.py  context.py  fixtures.py  judge.py  runner.py  scenario.py  scoring.py  types.py
apps/api/migrations/: README  env.py
apps/api/tests/: conftest.py  factories.py  test_agent_approve_by_sms.py  test_agent_auto_send.py  test_agent_await_approval_push_enqueue.py  test_agent_classify_intent.py  test_agent_classify_severity.py  test_agent_degraded_mode.py  test_agent_draft_response.py  test_agent_draft_sender.py  test_agent_emergency.py  test_agent_emergency_chain.py  test_agent_finalize_draft_decision.py  test_agent_graph.py  test_agent_graph_entry.py  test_agent_landlord_sms.py  test_agent_nodes.py  test_agent_schemas.py  test_agent_shadow_interrupt.py  test_auth.py  test_case_lifecycle.py  test_cases_resolve_router.py  test_cases_router.py  test_checkpointer.py  test_config.py  test_cost_reporting.py  test_db_engine.py  test_degraded_mode_sweep.py  test_devices_router.py  test_drafts_router.py  test_e2e_core_loop.py  test_evals.py  test_expo_push.py  test_health.py  test_integrations_anthropic.py  test_integrations_sms_segments.py  test_langgraph_hello_world.py  test_main_error_envelope.py  test_me.py  test_migrations.py  (+41 more)
(+345 files in other folders)
