[project]
name = "stoop-api"
version = "0.1.0"
description = "Stoop — AI tenant-maintenance handling for landlords (FastAPI backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "sentry-sdk[fastapi]>=2.62.0",
    "sqlalchemy[asyncio]>=2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
