[project]
name = "stoop-api"
version = "0.1.0"
description = "Stoop — AI tenant-maintenance handling for landlords (FastAPI backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.9.7",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "sentry-sdk[fastapi]>=2.62.0",
    "sqlalchemy[asyncio]>=2,<3",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# errors, Pyflakes, import sorting, naming, bugbear, pyupgrade, async, security
select = ["E", "F", "I", "N", "B", "UP", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
# asserts are fine in tests and eval harnesses
"tests/**" = ["S101"]
"evals/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# third-party libs without type stubs
module = ["twilio.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O (default)",
    "integration: requires a database via docker-compose",
    "eval: hits the real Anthropic API — costs money, never in default runs",
]
